@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii check_ssl_cert.1
 .\"
-.TH "check_ssl_cert" 1 "March, 2021" "1.147.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "April, 2021" "2.0.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -111,8 +111,14 @@ this help message
 .BR "   --http-use-get"
 use GET instead of HEAD (default) for the HTTP related checks
 .TP
+.BR "  --ignore-altnames"
+ignores alternative names when matching pattern specified in -n (or the host name)
+.TP
 .BR "   --ignore-exp"
 ignore expiration date
+.TP
+.BR "   --ignore-host-cn"
+do not complain if the CN does not match the host name
 .TP
 .BR "   --ignore-ocsp"
 do not check revocation with OCSP
