@@ -1,3 +1,4 @@
+ * The host name must now always match with the certificate
  * Fixed the man page, ```README.md``` and ```--help``` output (some options were missing)
  * Short options can be grouped (e.g., ```-vs -c 10 -w 15```)
  * Different verbosity levels can be specified (```-v``` can be used more than once)
